fix center on small screen

--- a/themes/almeida/assets/sass/base/_utilities.scss
+++ b/themes/almeida/assets/sass/base/_utilities.scss
@@ -12,6 +12,10 @@
         margin-right: auto;
         text-align: center;
     }
+
+    .row .col {
+        float: none!important;
+    }
 }
 
 .o-section {
